# fourier-forge

./: .gitignore  CMakeLists.txt  README.md
include/: FourierCore.hpp  Renderer.hpp  SVGParser.hpp  VideoExporter.hpp
src/: main.cpp
